# flash_attention_cute

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.py  llama.py  qwen2.py
csrc/: CMakeLists.txt  flash_attention.h  flash_attention_api.cpp  flash_attention_hdim128_bf16.cu  flash_attention_hdim128_fp16.cu  flash_attention_impl.cu  flash_attention_template.cuh  kernel_dispatcher.h  mask.cuh  utils.h
examples/: CMakeLists.txt  sgemm_1.cu  sgemm_2.cu  sgemm_sm70_twostage.cu
flash_attention/: __init__.py  flash_attention.py  load_cpp_extention.py
models/: modeling_llama.py  modeling_qwen2.py  patch_llama.py  patch_qwen2.py  rope_attn_fwd.py
scripts/: benchmark_kernel.py  benchmark_llm.py  benchmark_llm_e2e.py
src/: benchmark.py  flash_attention.cu  flash_attention.cuh  flash_attention.h  flash_attention_api.cpp  flash_attention_hdim128_fp16.cu  flash_attention_template.cuh  sgemm.cu  sgemm_1.cu  sgemm_2.cu  sgemm_sm70_twostage.cu  sgemm_sm80_multistage.cu
